# uselessgoddess-ryzr

./: .gitignore  .gitkeep  Cargo.toml  README.md  justfile
.github/workflows/: bench.yml  ci.yml
crates/ryzr-backend/: Cargo.toml
crates/ryzr-backend/benches/: engines.rs
crates/ryzr-backend/src/: batch.rs  compile.rs  event.rs  hybrid.rs  jit.rs  lib.rs  pack.rs  scalar.rs  threaded.rs
crates/ryzr-backend/tests/: differential.rs
crates/ryzr-core/: Cargo.toml
crates/ryzr-core/benches/: simulation.rs
crates/ryzr-core/src/: backend.rs  circuit.rs  lib.rs  opt.rs
crates/ryzr-core/tests/: correctness.rs
crates/ryzr-gui/: Cargo.toml
crates/ryzr-gui/src/: main.rs
crates/ryzr-riscv/benches/: riscv.rs
crates/ryzr-riscv/examples/: perf.rs
crates/ryzr-riscv/tests/: cpu.rs
docs/: PERFORMANCE.md
