[package]
name = "ryzr-backend"
version = "0.1.0"
edition.workspace = true

[lib]
bench = false

[dependencies]
ryzr-core = { path = "../ryzr-core" }
cranelift-entity = "0.132"

cranelift-codegen = { version = "0.132", optional = true }
cranelift-frontend = { version = "0.132", optional = true }
cranelift-jit = { version = "0.132", optional = true }
cranelift-module = { version = "0.132", optional = true }
cranelift-native = { version = "0.132", optional = true }

rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["jit", "rayon"]

jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]
rayon = ["dep:rayon"]

[lints]
workspace = true

[[bench]]
name = "engines"
harness = false
